--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test-verstka",
+  "name": "dashboard",
   "version": "1.0.0",
   "main": "index.js",
   "author": "Nataliia Sychevska",
